err/gates.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Gates-1.0.0b0.egg-info'...
Listing './lib/python3.5/site-packages/Routes-1.13.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/gates'...
Listing './lib/python3.5/site-packages/gates/core'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/routes'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Compiling './lib/python3.5/site-packages/webob/byterange.py'...
***   File "./lib/python3.5/site-packages/webob/byterange.py", line 130
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/dec.py'...
***   File "./lib/python3.5/site-packages/webob/dec.py", line 148
    except webob.exc.HTTPException, resp:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/exc.py'...
***   File "./lib/python3.5/site-packages/webob/exc.py", line 1027
    except HTTPException, exc:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/headers.py'...
***   File "./lib/python3.5/site-packages/webob/headers.py", line 77
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/multidict.py'...
***   File "./lib/python3.5/site-packages/webob/multidict.py", line 169
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/request.py'...
***   File "./lib/python3.5/site-packages/webob/request.py", line 795
    assert isinstance(todo, (int, long)), `todo`
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webob/response.py'...
***   File "./lib/python3.5/site-packages/webob/response.py", line 1180
    crc = zlib.crc32("") & 0xffffffffL
                                     ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
